# pyoas

./: .gitignore  .pre-commit-config.yaml  BUGS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.claude/commands/: check.md  commit.md  prompt-coach.md  release.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  publish.yml  publish.yml.disabled
docs/: cli.md  configuration.md  index.md  installation.md  packages.md  quickstart.md
docs/guides/: claude-skills.md  custom-templates.md  dependencies.md  models.md  routers.md  services.md  tests.md
examples/petstore/: README.md  openapi.yaml  pyoas.yaml
examples/plugin_example/: README.md  myapp_plugin.py
src/pyoas/: __init__.py
tests/claude/: test_skill_scaffolder.py
tests/core/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_differ.py  test_doctor.py  test_fixer.py  test_parsed_spec.py  test_parser.py  test_plugins.py  test_renderer_extensions.py  test_resolver.py  test_tags.py  test_utils.py
tests/fastapi/: conftest.py  test_deps_scaffold.py  test_params.py  test_router_generator.py  test_router_scaffold.py  test_scaffold.py  test_servicetestscaffold.py  test_testscaffold.py
tests/fixtures/: allof_inheritance.yaml  body_field_constraints.yaml  circular_ref.yaml  component_enums.yaml  deprecated_fields.yaml  discriminated.yaml  doctor_issues.yaml  fixable_spec.yaml  form_upload.yaml  generic_paginated.yaml  generic_paginated_list_param.yaml  generic_paginated_no_trailing.yaml  inline_defs_3.1.yaml  inline_schemas.yaml  multi_response.yaml  multi_tag.yaml  no_tags.yaml  no_tags_paginated.yaml  optional_before_required.yaml  petstore_3.0.yaml  petstore_3.1.yaml  petstore_migrate_v2.yaml  read_write.yaml  secured.yaml  secured_scoped.yaml  (+2 more)
(+70 files in other folders)
